2002-03-05  Christian Meyer  <chrisime@gnome.org>

	* configure.in: Added 'de' to ALL_LINGUAS.

2002-03-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): fix leak.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_get_icon_widget),
	(bonobo_ui_util_xml_get_pixbuf),
	(lookup_stock_compat): lookup pixmaps not
	stock items.

2002-03-04  Michael Meeks  <michael@ximian.com>

	* Version 1.112.1

2002-03-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui-auto.c (test_ui_performance):
	use top_srcdir.

	* bonobo/bonobo-ui-sync-status.c
	(impl_bonobo_ui_sync_status_state): get
	'resize_grip' from the parent 'status' node, and
	don't show the grip if we have controls / items
	shown to the right.

2002-03-02  James Willcox  <jwilcox@cs.indiana.edu>

	* bonobo/bonobo-file-selector-util.c
	(run_file_selector): fix for FILESEL_OPEN_MULTI

2002-03-02  Paolo Maggi  <maggi@athena.polito.it>

	* bonobo/bonobo-widget.c (bonobo_widget_construct_control):
	bw is a floating objetc so to unref (and kill it) we have to 
	call gtk_object_sink
	(bonobo_widget_new_control_from_objref): call CORBA_exception_free
	to free the ev
	(bonobo_widget_new_control): ditto

2002-02-27  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-zoomable-frame.c
	(bonobo_zoomable_frame_bind_to_zoomable),
	(bonobo_zoomable_frame_dispose): only hold a CORBA
	ref on the remote zoomable, to ease ref counting
	issues with BonoboControl.

2002-02-27  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control.c:
	(bonobo_control_get_popup_ui_container): fix
	race condition/re-entrancy bug.

2002-02-26  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: now libbonoboui needs gtk+ 1.3.14

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_state): 
	Show the resize grip if resize_grip is set to 1.

	* bonobo/bonobo-file-selector-ui.c: fixed to work
	with the new GtkFileSelection API for multiple files

2002-02-24  Jody Goldberg <jody@gnome.org>
